SFDCProject/src/objects/FS_Component_Code__c.object
<CustomObject>
    <description>Codes used for reporting the components in FS Action records.</description>
    <fields>
        <fullName>FS_Component_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to show that this code can be used to create or edit FS Action records.</description>
        <inlineHelpText>Check to show that this code can be used to create or edit FS Action records.</inlineHelpText>
        <label>FS Component Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Component_Description__c</fullName>
        <description>Description of the component to be reported</description>
        <inlineHelpText>Enter the description of the component to be reported</inlineHelpText>
        <label>FS Component Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_GET_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you want to collect Quantity information in the FS Action record for this component</description>
        <inlineHelpText>Check if you want to collect Quantity information in the FS Action record for this component</inlineHelpText>
        <label>FS GET Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Description field should be entered when using this component code</description>
        <inlineHelpText>Check if the Description field should be entered when using this component code</inlineHelpText>
        <label>FS Get Desc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_KwH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Unit KwH Reading field should be entered when using this component code</description>
        <inlineHelpText>Check if the Unit KwH Reading field should be entered when using this component code</inlineHelpText>
        <label>Get Energy Reading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Manufacturer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Unit Manufacturer field should be entered when using this component code</description>
        <inlineHelpText>Check if the Unit Manufacturer field should be entered when using this component code</inlineHelpText>
        <label>FS Get Manufacturer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Unit Model field should be entered when using this component code</description>
        <inlineHelpText>Check if the Unit Model field should be entered when using this component code</inlineHelpText>
        <label>FS Get Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Serial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Unit Serial field should be entered when using this component code</description>
        <inlineHelpText>Check if the Unit Serial field should be entered when using this component code</inlineHelpText>
        <label>FS Get Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Signal_Strength_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox to make Signal Strength Code mandatory</description>
        <inlineHelpText>Check this checkbox to make Signal Strength Code mandatory</inlineHelpText>
        <label>FS_Get_Signal_Strength_Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Signal_Strength__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Unit Signal Strength field should be entered when using this component code</description>
        <inlineHelpText>Check if the Unit Signal Strength field should be entered when using this component code</inlineHelpText>
        <label>FS Get Signal Strength</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Get_Voltage_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to make Voltage Test mandatory</description>
        <inlineHelpText>Check this box to make Voltage Test mandatory</inlineHelpText>
        <label>FS_Get_Voltage_Test</label>
        <type>Checkbox</type>
    </fields>
    <label>FS Component Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FS Component Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FS Component Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>